# poulpeEdit

./: .gitignore  CMakeLists.txt  README.md
assets/css/: styles.css
config/: com.github.galliume.poulpeEdit.gschema.xml  poulpeEdit.json
src/: CMakeLists.txt  defines.h  main.c
src/core/: CMakeLists.txt  engine.c  engine.h  file.c  file.h  logger.c  logger.h
src/network/: CMakeLists.txt  socket.h  socket_linux.c  socket_win32.c  winSocket.c
src/platform/: CMakeLists.txt  platform.h  platform_linux.c  platform_win32.c
src/views/: CMakeLists.txt  application.c  application.h  window.c  window.h
